# yolov5-ncnn-android

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov5s.torchscript.ncnn.param
app/src/main/java/com/example/yolov5ncnnandroid/: MainActivity.java  MainActivity_bak.java
app/src/main/java/com/example/yolov5ncnnandroid/analysis/: FullImageAnalyse.java  FullScreenAnalyse.java
app/src/main/java/com/example/yolov5ncnnandroid/detector/: Yolov5NcnnDetector.java
app/src/main/java/com/example/yolov5ncnnandroid/utils/: CameraProcess.java  ImageProcess.java  Recognition.java
app/src/main/jni/: CMakeLists.txt  yolov5_head_ncnn.cpp  yolov5_pnnx.cpp  yolov5ncnn_jni.cpp
app/src/main/jni/ncnn-20220420-android-vulkan/arm64-v8a/include/ncnn/: platform.h
app/src/main/jni/ncnn-20220420-android-vulkan/x86/include/ncnn/: platform.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
